<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/chatsToolbarColor"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:textColor="?reverseMainColor"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/AccessibilityId_settings" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/shape_bg_top_20"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/token_contract"
                android:textColor="@color/color616569"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etContract"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_input_14"
                android:hint="@string/hint_input_contract_address"
                android:paddingStart="20dp"
                android:paddingTop="16dp"
                android:paddingEnd="20dp"
                android:paddingBottom="16dp"
                android:textColor="?android:textColorPrimary"
                android:textColorHint="?thirdTextColor"
                android:textSize="@dimen/small_font_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:maxLines="1"
                android:text="@string/symbol"
                android:textColor="@color/color616569"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etSymbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_input_14"
                android:hint="@string/hint_input_token_symbol"
                android:paddingStart="20dp"
                android:paddingTop="16dp"
                android:paddingEnd="20dp"
                android:paddingBottom="16dp"
                android:textColor="?android:textColorPrimary"
                android:textColorHint="?thirdTextColor"
                android:textSize="@dimen/small_font_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:maxLines="1"
                android:text="@string/token_decimal"
                android:textColor="@color/color616569"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_input_14"
                android:hint="18"
                android:paddingStart="20dp"
                android:paddingTop="16dp"
                android:paddingEnd="20dp"
                android:paddingBottom="16dp"
                android:textColor="?android:textColorPrimary"
                android:textColorHint="?thirdTextColor"
                android:textSize="@dimen/small_font_size" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>