<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bg_top_white_20"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/receive"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:textColor="?reverseMainColor"
        android:textSize="16sp"
        tools:text="LITE(BSC)" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_qr_stoke_4"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ivQR"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvTitleTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/scan_qr_to_transfer"
        android:textColor="?reverseMainColor"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_address_8"
        android:gravity="center"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:textColor="@color/color616569"
        android:textSize="14sp"
        tools:text="TXF3JLHeRFbEnf3MMMjBkZu3BcS7CEXCoz" />

    <TextView
        android:id="@+id/tvOk"
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/copy" />

</LinearLayout>