<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_popup_20"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_address_8"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp">

        <EditText
            android:id="@+id/etPwd1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_wallet_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="12"
            android:textColor="?attr/reverseMainColor"
            android:textColorHint="?attr/hintTextColor"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/ivClear1"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="7dp"
            android:src="@drawable/ic_close"
            android:visibility="invisible"
            app:tint="@color/colorC2C9D1" />

        <CheckBox
            android:id="@+id/togglePwd"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:button="@drawable/bg_view_status"
            android:buttonTint="@color/colorC2C9D1"
            android:gravity="center"
            android:padding="7dp"
            android:textOff=""
            android:textOn="" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvOk"
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ok" />

</LinearLayout>